[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "subnet_link_weaver"
version = "1.0.0"
description = "局域网多 IP 配置工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "luoqianyi", email = "luoqianyi@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
subnet-link-weaver = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
